# ProjectEngine

./: .clangd  .gitignore  CMakeLists.txt  Makefile  Makefile_Backup  README.md  TODO.md  WBS.md  compile_commands.json  main.cpp  profile.sh
.cache/clangd/index/: CGravity.hpp.18D558A7B684DD11.idx  CRigidBody.hpp.4A7142A5234BB7B0.idx  CSprite.hpp.41B22C77F6302017.idx  CTransform.hpp.B4A41021AE16ECE7.idx  Component.hpp.24838FAACA771435.idx  Component.hpp.85F2DA7D8AA289C1.idx  ComponentRegistry.hpp.3DD7176D2118D742.idx  ComponentRegistry.hpp.6F45EBA250D8B178.idx  ECS.h.38893F5E820F8BD7.idx  Physics.hpp.571A40241ABF16FC.idx  Physics.hpp.A490C41D822EED02.idx  Render.hpp.256F14F29392516E.idx  Render.hpp.387C4B7EAB41F0B1.idx  (+94 more)
assets/: scene.json
engine/: CMakeLists.txt
engine/include/ComponentRegistry/: Component.hpp  ComponentRegistry.hpp
engine/include/ComponentRegistry/physics/: Physics.hpp
engine/include/ComponentRegistry/render/: Render.hpp
engine/include/ECS/: ECS.h
engine/include/ECS/component/: component.hpp
engine/include/ECS/componentArray/: componentArray.hpp
engine/include/ECS/entity/: entity.hpp
engine/include/ECS/system/: baseSystem.hpp  system.hpp
engine/include/ECS/tags/: tagArray.hpp
engine/include/ECS/utils/: signatures.hpp
engine/include/Scene/: Scene.hpp  scene.cpp  scene.hpp
engine/include/SystemRegistry/: System.hpp  SystemRegistry.hpp
engine/include/cameraController/: cameraController.hpp
engine/include/core/: colors.hpp  setting.hpp  settings.hpp
engine/include/gameEngine/: defaultComponent.hpp  defaultSystem.hpp  gameEngine.hpp
engine/include/gameEngine/Component/: Component.hpp  ComponentRegistry.hpp
engine/include/gameEngine/Component/physics/: CGravity.hpp  CRigidBody.hpp  Physics.hpp  vector2_serilize.hpp
engine/include/gameEngine/Component/render/: CSprite.hpp  CTransform.hpp  Render.hpp
engine/include/gameEngine/Scene/: scene.hpp
engine/include/gameEngine/System/: System.hpp
engine/include/serialization/Component/: Component.hpp
engine/include/serialization/Entity/: Entity.hpp
engine/include/serialization/Scene/: Scene.hpp
engine/src/ECS/entity/: entity.cpp
engine/src/ECS/tags/: tagArray.cpp
engine/src/cameraController/: cameraController.cpp
engine/src/gameEngine/: gameEngine.cpp  gameEngine.cpp.backup  gameEngine.hpp
examples/Astroids/: CMakeLists.txt  main.cpp
examples/Astroids/include/components/: components.hpp
examples/Astroids/include/game/: game.hpp
examples/Astroids/include/system/: system.hpp
examples/Pong/: CMakeLists.txt  main.cpp
examples/TwoThousandFallingBoxes/: CMakeLists.txt
examples/game/: main.cpp
game/: #main.cpp#  CMakeLists.txt  main.cpp
game/src/game/: game.hpp
game/src/player/: player.cpp  player.hpp
profile/: out.folded  out.perf  perf.data  perf.data.old
(+5 files in other folders)
