cmake_minimum_required(VERSION 3.20)
project(GameProject LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Output dirs
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_subdirectory(engine)

file(GLOB EXAMPLE_DIRS "${CMAKE_SOURCE_DIR}/examples/*")

foreach(EXAMPLE_DIR ${EXAMPLE_DIRS})
    if (IS_DIRECTORY ${EXAMPLE_DIR})
        add_subdirectory(${EXAMPLE_DIR})
    endif()
endforeach()
